--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/icons/icon-192.png" />
-    <meta name="theme-color" content="#FF6B6B" />
+    <meta name="theme-color" content="#141218" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500;8..144,600;8..144,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Muscle Mentour</title>
   </head>
-  <body class="bg-slate-950 text-white">
+  <body class="bg-background text-onSurface">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
